# AudioScript

./: .gitignore  CMakeLists.txt  README.md  SETUP.md  TEST_ANLEITUNG.md  build.bat  download_model.bat  setup_dependencies.bat
src/: AudioRecorder.cpp  AudioRecorder.h  ClipboardHelper.cpp  ClipboardHelper.h  ModernUI.cpp  ModernUI.h  WhisperSTT.cpp  WhisperSTT.h  main.cpp  main_gui.cpp
